--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
 .discord-link:hover {
     opacity: 0.8;
+	text-decoration: underline;
 }
 
 .discord-link img {
@@ -75,9 +76,14 @@
     height: 24px;
 }
 
-        .nav-links a:hover, .nav-links a.active {
+        .nav-links a:hover {
             background-color: #141516;
+			text-decoration: underline;
         }
+		
+		.nav-links a.active {
+		background-color: #141516;
+		}
 
         /* Main Container */
         .container {
@@ -678,8 +684,10 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="logo">
-            <img src="abyssus_builds.png" alt="Abyssus Builds" style="height: 50px;">
-        </div>
+    <a href="index.html">
+        <img src="abyssus_builds.png" alt="Abyssus Builds" style="height: 50px;">
+    </a>
+</div>
         <div class="nav-links">
             <a href="index.html" class="active">Builds</a>
             <a href="creator.html">Build Creator</a>
@@ -1492,6 +1500,5 @@ window.addEventListener('scroll', function() {
     </script>
 </body>
 </html>
-
 
 
