--- a/creator.html
+++ b/creator.html
@@ -52,9 +52,14 @@
             transition: background-color 0.3s;
         }
 
-        .nav-links a:hover, .nav-links a.active {
+        .nav-links a:hover {
             background-color: #141516;
+			text-decoration: underline;
         }
+		
+		.nav-links a.active {
+		background-color: #141516;
+		}
 
         .creator-container {
             max-width: 800px;
@@ -564,8 +569,10 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="abyssus_builds.png" alt="Abyssus Builds" style="height: 50px;">
-        </div>
+    <a href="index.html">
+        <img src="abyssus_builds.png" alt="Abyssus Builds" style="height: 50px;">
+    </a>
+</div>
         <div class="nav-links">
             <a href="index.html">Builds</a>
             <a href="creator.html" class="active">Build Creator</a>
@@ -1589,6 +1596,7 @@ async function addBuild() {
         </script>
     </body>
 </html>
+
 
 
 
