--- a/creator.html
+++ b/creator.html
@@ -269,6 +269,8 @@
 
 .discord-link:hover {
     opacity: 0.8;
+	text-decoration: underline;
+
 }
 
 .discord-link img {
@@ -1596,6 +1598,7 @@ async function addBuild() {
         </script>
     </body>
 </html>
+
 
 
 
