--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 			<a href="about.html">About</a>
         </div>
 		<a href="https://discord.gg/K6nbCvuPbm" class="discord-link" target="_blank" rel="noopener noreferrer">
-    Join our Discord!
+    Discord
 			<img src="images/Discord_Icon.png" alt="Discord">
 </a>
     </nav>
@@ -1503,5 +1503,6 @@ window.addEventListener('scroll', function() {
     </script>
 </body>
 </html>
+
 
 
